# OhtML

./: .gitignore  .ocamlformat  README.md  db.sqlite  declare.opam  dune-project  esy.json  ohtml.opam  ohtml.opam.locked  package-lock.json  package.json  ppx_model.opam  principles.md  user_stories.md
lib/: database.ml  database.sql  db.ml  dune  exhibit.eml.ml  exhibit.ml  exhibit.mli  resource.ml  sql.eml.ml  sql_setup.eml.ml
lib/components/: ExhibitDetailed.ml  ExhibitList.ml  ExhibitPost.ml  ImageUpload.ml  dune
lib/hx/: css.ml  dune  hx.ml
lib/models/: dune  ex.ml  exhibit.ml  image.ml  user.ml
ppx-model/: dune  model.ml
scratch/: aria.md  example.ml  rsjs.md
static/: home.css
tables/: 010-image.sql  010-user.sql  02-comments.sql  020-exhibits.sql  dream_session.sql  somethin.sql
test/: dune
test/ppx/: dune  test.expected.ml  test.ml
