(library
 (modules sql exhibit database resource)
 (libraries lwt caqti-lwt caqti-driver-sqlite3 bos base ppx_rapper_lwt tyxml dream)
 (name declare)
 (preprocess (pps ppx_rapper ppx_blob lwt_ppx))
 (preprocessor_deps (glob_files *.sql)))

(rule
 (targets sql.ml)
 (deps sql.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))

(rule
 (targets exhibit.ml)
 (deps exhibit.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))

