(library
 (modules sql exhibit database resource)
 (libraries lwt caqti-lwt bos base ppx_rapper_lwt tyxml dream)
 (name ohtml)
 (preprocess (pps ppx_rapper lwt_ppx))
 (preprocessor_deps (glob_files *.sql)))

(rule
 (targets sql.ml)
 (deps sql.eml.ml)
 (action (run dream_eml %{deps} --workspace %{workspace_root})))
